--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.7.3",
     "heroicons": "^2.2.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.488.0",
     "next": "15.3.0",
     "react": "^19.0.0",
